--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -8,10 +8,13 @@
     <div class="main">
         <div class="top-row px-4">
             <img src="/assets/logo.png" alt="logo" class="logo" />
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+            <ul class="nav-links">
+                <li><a href="https://docs.microsoft.com/aspnet/" target="_blank">Training Videos</a></li>
+                <li><a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a></li>
+            </ul>
         </div>
 
-        <div class="content px-4">
+        <div class="container-type-one">
             @Body
         </div>
     </div>
