--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -3,6 +3,7 @@
 html,
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  background-color: rgb(61, 61, 61);
 }
 
 a,
@@ -49,8 +50,4 @@ a,
   position: absolute;
   right: 0.75rem;
   top: 0.5rem;
-}
-
-.logo {
-  width: 90px;
 }
