--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,9 +1,4 @@
 @page "/"
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
-
-<Counter />
+<StandardHeaderOne>Training Videos</StandardHeaderOne>
+<YoutubeVideoList />
