Navigation and Spanish Support added

--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,4 +1,5 @@
 @page "/"
+@inject IStringLocalizer<App> localizer
 
-<StandardHeaderOne>Training Videos</StandardHeaderOne>
+<StandardHeaderOne>@localizer["Training Videos"]</StandardHeaderOne>
 <YoutubeVideoList />
