--- a/_Imports.razor
+++ b/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using MarathonTutorialWebsite
 @using MarathonTutorialWebsite.Shared
+@using Microsoft.Extensions.Configuration
+@using Microsoft.Extensions.Localization
