--- a/Shared/MainLayout.razor.css
+++ b/Shared/MainLayout.razor.css
@@ -15,7 +15,7 @@
 .top-row {
   background-color: #1b1b1b;
   border-bottom: 1px solid #d6d5d5;
-  justify-content: space-between;
+  justify-content: flex-start;
   height: 3.5rem;
   display: flex;
   align-items: center;
