--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -1,6 +1,17 @@
 @inherits LayoutComponentBase
 @inject IStringLocalizer<App> localizer
 
+<style>
+    .nav-links a {
+        color: orangered;
+    }
+
+    .nav-links a:hover {
+        color: maroon;
+        text-decoration: none;
+    }
+</style>
+
 <div class="page">
     <div class="main">
         <div class="top-row px-4">
