--- a/Pages/TutorialVideoPage.razor
+++ b/Pages/TutorialVideoPage.razor
@@ -26,8 +26,8 @@
     }
 
     .fluidMedia iframe {
-        width: 85vw;
-        height: 64vw;
+        width: 1024px;
+        height: 768px;
         border-radius: 20px;
     }
 
